break-compability: ignore configurations
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>